drugs popup alignment issue

--- a/src/app/quoting/add-drug/add-drug.component.css
+++ b/src/app/quoting/add-drug/add-drug.component.css
@@ -141,3 +141,6 @@ button{
   text-overflow: unset;
   width: auto;
 }
+.keep-the-drug{
+    min-width: 150px;
+}
